--- a/gulp_001/package.json
+++ b/gulp_001/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cc",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "gulp",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "browser-sync": "^2.17.5",
     "cross-env": "^3.0.0",
     "express": "^4.16.4",
+    "fs-extra": "^8.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -39,8 +40,5 @@
     "gulp-uglifyes": "^0.2.1",
     "imagemin-pngquant": "^5.1.0"
   },
-  "dependencies": {
-    "bluebird": "^3.5.0",
-    "fs-extra": "^2.1.2"
-  }
+  "dependencies": {}
 }
