--- a/gulp_001/package.json
+++ b/gulp_001/package.json
@@ -21,7 +21,6 @@
     "babel-preset-stage-3": "^6.24.1",
     "browser-sync": "^2.17.5",
     "cross-env": "^3.0.0",
-    "express": "^4.16.4",
     "fs-extra": "^8.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -40,5 +39,7 @@
     "gulp-uglifyes": "^0.2.1",
     "imagemin-pngquant": "^5.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
