--- a/gulp_001/package.json
+++ b/gulp_001/package.json
@@ -12,19 +12,14 @@
   "author": "cc",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
     "browser-sync": "^2.17.5",
     "cross-env": "^3.0.0",
     "fs-extra": "^8.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-changed": "^3.2.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
@@ -36,8 +31,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.1.2",
-    "gulp-uglifyes": "^0.2.1",
-    "imagemin-pngquant": "^5.1.0"
+    "gulp-uglifyes": "^0.2.1"
   },
   "dependencies": {
     "express": "^4.16.4"
